# HilbertCrypt_bbw

./: README.md
Cpp/: CMakeLists.txt  hilbert_encrypt.cpp
Cpp/Release/v1.0.0/: Version-Info_v1.0.0.md  hilbert_encrypt_v1.0.0.cpp
Cpp/Release/v1.0.1/: Update-Info_v1.0.1.md  hilbert_encrypt_v1.0.1.cpp
Python/: bbw_tphx_NumPy.py
Python/Release/v1.0/: 读我.txt
Python/Release/v1.1/: 读我.txt
Python/Release/v1.2/: 读我.txt
Python/src/: algorithm.py  cli.py
Release/v1.0/: bbw_tphx.py
Release/v1.1/: bbw_tphx_with_opencv.py
html/GilbertCrypt-html/: index.html
html/v1.0/: GilbertCrypt-hmtl.html
html/versions/Release/v3.0/: What's new.txt
html/versions/v1.1/: Update-Info.txt
html/versions/v2-beta-04180112/: GilbertCrypt-hmtl.html  Update-Info.txt
html/versions/v2-beta-04182019/: Update-Info.txt
html/versions/v2-beta-css@media/: branch-Info.txt
html/versions/v3-beta-1/: Update-Info.txt
html/versions/v3-beta-1.1/: Update-Info.txt  index.html
html/versions/v3-beta-2-Bugfix/: Update-Info.txt  index.html
html/versions/v3-beta-2-Unsafe/: Update-Info.txt
html/versions/v3-beta-3/: Update-Info.txt
html/versions/v3-beta-3.1/: Update-Info.txt
html/versions/v3-beta-4.0/: Update-Info.txt  index.html
html/versions/v3-beta-4.1/: Update-Info.txt
html/versions/v3-beta-4.1.1/: Update-Info.txt
html/versions/v3-beta-4.1.2/: Update-Info.txt
html/versions/v3-beta-4.2/: Update-Info.txt
html/versions/v3-beta-KlienBlue/: Info.txt  index.html
js/Gilbert-Nodejs/: package-lock.json  package.json  scrambler.js
main/: bbw_tphx.py
web/src/: worker.js
web/versions/MVP/: index.html
web/versions/Release/v1.2.0/: What's new.txt
